# fromtemplate

./: .pre-commit-config.yaml  README.md  ci-cd.yml  pyproject.toml
src/fromtemplate/: __init__.py
